# salinic

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  tests.yml  version_bump.yml
examples/app1/: README.md  pyproject.toml
examples/app1/app1/: main.py  schema.py
examples/app1/data/: nodes1.json
salinic/: __init__.py  dsn.py  engine.py  field.py  index.py  query.py  schema.py  schema_manager.py  search.py  session.py  types.py  url.py  utils.py
salinic/backends/solr/: client.py  index.py  schema_manager.py  session.py  types.py
salinic/backends/xapian/: client.py  index.py  schema_manager.py  session.py
tests/: conftest.py  test_dsn.py  test_engine.py  test_field.py  test_index.py  test_query.py  test_schema.py  test_schema_storable_vs_indexable.py  test_search.py  test_search2.py  test_search_keywords.py  test_session.py  test_session_add.py  test_session_remove.py  test_url.py  test_utils.py
tests/backends/solr/: conftest.py  test_client.py  test_index.py  test_index_add.py  test_index_schema_dump.py  test_index_search.py  test_schema_manager.py
