[tool.poetry]
name = "salinic"
version = "0.2.7"
description = "Search abstraction layer"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
pydantic = "^2.1.1"
xapianpy = "^1.4.22.post2305071405"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
