[tool.poetry]
name = "salinic"
version = "0.4.0"
description = "Search abstraction layer"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
pydantic = "^2.7"
xapianpy = {version = "^1.4.22.post2305071405", optional = true}
requests = "^2.31.0"

[tool.poetry.extras]
xapian = ["xapianpy"]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
requests-mock = {extras = ["fixture"], version = "^1.11.0"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
