[tool.poetry]
name = "salinic"
version = "0.6.1"
description = "Search abstraction layer"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10"
requests = "^2.31.0"
xapianpy = {version = "1.4.22.post2406040406", optional = true}
glom = "^24.11"

[tool.poetry.extras]
xapian = ["xapianpy"]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
requests-mock = {extras = ["fixture"], version = "^1.11.0"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
